signature blurry need to fix

--- a/src/styles/ReviewYourReferenceCheckPage.css
+++ b/src/styles/ReviewYourReferenceCheckPage.css
@@ -215,9 +215,7 @@
   width: 100%;
   border-radius: 10px;
 }
-.file-upload-container{
-  font-weight: 500;
-}
+
 .file-upload-area{
   height: 300px;
 }
